@@ -1,7 +1,0 @@
-/.vs
-/mpg123.VC.db
-/x64
-/Win32
-/*.opendb
-/Debug
-/libout123.VC.db
