@@ -1,4 +1,0 @@
-/.vs
-/Debug
-/Win32
-/x64
