@@ -1,3 +1,0 @@
-/Debug
-/Win32
-/x64
