@@ -12,7 +12,11 @@
 - out123: Fix stupid crash with verbose mode and tone generation (print
   the string if the pointer is non-null, not if it is null).
 - Finally provide position-independent code for x86 with assembly optimisations.
-  The textrels are gone thanks to Won Kyu Park.
+  The textrels are gone thanks to Won Kyu Park and Taihei Momma.
+- Clarify some license language in files descending from the original MMX
+  optimisation.
+- Use of the i486 decoder is now discouraged more prominently, in configure
+  output.
 
 1.24.0
 ------
